# meteo-zone

./: README.md
arduino-client/: EtherCard.cpp  EtherCard.h  enc28j60.cpp  main.cpp  tcpip.cpp
build-server-Desktop-Debug/: Makefile  server
client/: app.cpp  client.pro  configs.cpp  configs.h  log.cpp  log.h  main.cpp  meteo.cfg  sender.cpp  sender.h  tcpsocket.cpp
pi-client/: CMakeLists.txt  Makefile  app.cpp  app.h  client.pro  configs.cpp  configs.h  lcd.cpp  lcd.h  log.cpp  log.h  main.cpp  meteo.cfg  sender.cpp  sender.h  tcpclient.cpp  tcpclient.h  tcpsocket.cpp  tcpsocket.h
server/: CMakeLists.txt  Makefile  app.cpp  app.h  configs.cpp  configs.h  database.cpp  database.h  log.cpp  log.h  main.cpp  meteosrv.cfg  server.cpp  server.h  server.pro  tcpclient.cpp  tcpclient.h  tcpserver.cpp  tcpserver.h  tcpsocket.cpp  tcpsocket.h
server/net/: tcpclient.cpp  tcpclient.h  tcpserver.cpp  tcpserver.h
